<resources>
    <string name="app_name">Student Management Portal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_students">Students</string>
    <string name="nav_todo">Todo List</string>
    <string name="student_photo">Student</string>
    <string name="title_studentlist_list">studentDetails</string>
    <string name="title_studentlist_detail">studentList Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details_display">detailsDisplay</string>
    <string name="title_activity_edit_details">EditDetails</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">Gender :</string>
    <string name="last_name">Last Name :</string>
    <string name="first_name">First Name :</string>
    <string name="student_id">Student ID :</string>
    <string name="course">Course :</string>
    <string name="age">Age :</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="address">Address :</string>
</resources>
