<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailsDisplay">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_recycler"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_details"
        android:layout_margin="5sp"
        android:visibility="gone">
        <TableRow>
            <TextView
                android:text="@string/student_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:id="@+id/table_id"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/first_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:id="@+id/table_fn"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/last_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:id="@+id/table_ln"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/gender"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <RadioGroup
                android:id="@+id/table_gen"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:text="@string/male"
                    android:id="@+id/RadioMale"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:text="@string/female"
                    android:id="@+id/RadioFemale"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:text="@string/others"
                    android:id="@+id/RadioOthers"/>
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/course"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/table_add"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:id="@+id/table_course"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/age"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <NumberPicker
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:foregroundTint="@color/colorPrimary"
                android:theme="@style/AppTheme.Picker"
                android:textSize="20sp"
                android:id="@+id/table_age"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/address"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:id="@+id/table_add"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/table_submit"
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:text="@string/save_btn"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark1"
                android:textColor="@color/colorPrimary"/>
            <Button
                android:id="@+id/table_cancel"
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:text="@string/cancel_btn"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark1"
                android:textColor="@color/colorPrimary"/>
        </TableRow>
    </TableLayout>

</android.support.design.widget.CoordinatorLayout>